# django-matt-b2b

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
apps/: api.py
apps/core/: __init__.py  models.py
apps/core/management/commands/: seed_data.py
apps/organizations/: __init__.py  admin.py  apps.py  controllers.py  middleware.py  models.py  schemas.py
apps/organizations/controllers/: __init__.py  invitation_controller.py  member_controller.py  organization_controller.py  routes.py  team_controller.py  utils.py
apps/organizations/migrations/: 0001_initial.py  0002_initial.py
apps/organizations/models/: __init__.py  invitation.py  invitation_model.py  membership.py  membership_model.py  organization.py  organization_model.py  team.py
apps/organizations/schemas/: __init__.py  invitation_schema.py  membership_schema.py  organization_schema.py  team_schema.py
apps/users/: __init__.py  admin.py  apps.py  controllers.py  models.py  schemas.py
apps/users/controllers/: __init__.py  auth_controller.py  routes.py
apps/users/migrations/: 0001_initial.py
apps/users/models/: __init__.py  user_model.py
apps/users/schemas/: __init__.py  auth_schema.py  user_schema.py
config/: asgi.py  settings.py  settings_test.py  urls.py  wsgi.py
scripts/: check_file_length.py
tests/: conftest.py  test_auth.py  test_organizations.py
