# =============================================================================
# Django Matt B2B - Project Configuration
# =============================================================================

[project]
name = "django-matt-b2b"
version = "0.1.0"
description = "A B2B multi-tenant Django API built with django-matt"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0",
    "django-matt[full,auth] @ git+ssh://git@github.com/mattjaikaran/django-matt.git@v0.1.1",
    "psycopg[binary]>=3.1.0",
    "python-dotenv>=1.0.0",
    "gunicorn>=23.0.0",
    "uvicorn[standard]>=0.30.0",
]

# -----------------------------------------------------------------------------
# Dependency Groups (uv)
# -----------------------------------------------------------------------------
[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-django>=4.8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.5.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "mypy>=1.10.0",
    "django-stubs>=5.0.0",
    "pre-commit>=3.7.0",
]

# -----------------------------------------------------------------------------
# Build System
# -----------------------------------------------------------------------------
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["apps", "config"]

# -----------------------------------------------------------------------------
# Ruff Configuration
# -----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".git",
    ".github",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "migrations",
    "scripts",
    "staticfiles",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "ASYNC",  # flake8-async
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (Depends() pattern)
    "B904",   # raise without from in except (intentional for clean API errors)
    "SIM102", # nested if statements (sometimes clearer)
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]  # unused imports OK in __init__.py
"tests/**/*.py" = ["S101"]   # assert OK in tests

[tool.ruff.lint.isort]
known-first-party = ["apps", "config"]
section-order = ["future", "standard-library", "django", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
django = ["django"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# -----------------------------------------------------------------------------
# Pytest Configuration
# -----------------------------------------------------------------------------
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings_test"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-ra",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# -----------------------------------------------------------------------------
# Coverage Configuration
# -----------------------------------------------------------------------------
[tool.coverage.run]
source = ["apps"]
branch = true
omit = [
    "*/migrations/*",
    "*/__pycache__/*",
    "*/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
precision = 2

# -----------------------------------------------------------------------------
# MyPy Configuration
# -----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]
ignore_missing_imports = true
strict = false
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
exclude = ["migrations/", "tests/"]

[tool.django-stubs]
django_settings_module = "config.settings"
